# DataContractEnforcer

./: .gitignore  AGENT.md  DOMAIN_NOTES.md  README.md  create_violation.py  enforcer_report  generated_contracts  pyproject.toml  requirements.txt  rubrics  schema_snapshots  validation_reports  violation_log
backend/: __init__.py  app.py  watcher.py
contract_registry/: adapters.yaml  subscriptions.yaml
contracts/: __init__.py  adapter.py  ai_extensions.py  attributor.py  common.py  evolution.py  generator.py  lineage.py  report_generator.py  runner.py  schema_analyzer.py  what_if.py
enforcer_report/: report_data.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
generated_contracts/: langsmith-trace-records.yaml  langsmith-trace-records_dbt.yml  langsmith_traces.yaml  langsmith_traces_dbt.yml  week1-intent-records.yaml  week1_intent_records.yaml  week1_intent_records_dbt.yml  week2-verdict-records.yaml  week2-verdict-records_dbt.yml  week2_verdicts.yaml  week3-document-refinery-extractions.yaml  week3-document-refinery-extractions_dbt.yml  week3_extractions.yaml  week3_extractions_dbt.yml  week4-lineage-snapshots.yaml  week4-lineage-snapshots_dbt.yml  week5-event-records.yaml  week5-event-records_dbt.yml  week5_events.yaml
outputs/: quarantine  traces  week1  week2  week3  week4  week5
schema_snapshots/: ai_metrics_baseline.json  embedding_baseline.json  langsmith-trace-records_baseline.json  week1-intent-records_baseline.json  week2-verdict-records_baseline.json  week3-document-refinery-extractions_baseline.json  (+2 more)
schemas/: events
(+194 files in other folders)
