[project]
name = "data-contract-enforcer"
version = "0.1.0"
description = "TRP1 week 7 Data Contract Enforcer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
